<resources>
    <string name="app_name">BeFic</string>
    <string name="be_fic_title">Be:Fic</string>
    <string name="be_fic_subtitle">O Be:Fic é uma plataforma de autopublicação de histórias, sejam elas fanfics ou conteúdos originais</string>
    <string name="cadastre_se">Cadastre-se já!</string>
    <string name="solte_imaginacao">Solte a sua imaginação</string>
    <string name="solte_imaginacao_subtitle">Escreva histórias, tenha sua própria página, compartilhe ideias e deixe a imaginação fluir</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="title">formulário de cadastro</string>
    <string name="nome_de_usu_rio">nome de usuário</string>
    <string name="e_mail">e-mail</string>
    <string name="g_nero">gênero</string>
    <string name="idade">idade</string>
    <string name="telefone">telefone</string>
    <string name="condicoes">condicoes</string>
    <string name="enviar">enviar</string>
    <string name="sobre_mim">sobre mim</string>
    <string name="sobre_mim_text">Nome: Yasmin_S❤\nLocalização: SE- Aracaju\nCadastro: em 23/01/2022 18:24\n\n⿻ᴬ ᵍᵃʳᵒᵗᵃ ⁿᵃᵈᵃ ᵖᵒᵖᵘˡᵃʳ⿻\n*ೃꜰɪᴄᴡʀɪᴛᴇʀ, ᴍᴜʟᴛꜱʜɪᴘ ੈ✩\n° ໑ꜱʜᴇ/ʜᴇʀ; ɪɴꜰᴊ 🏳️‍🌈?</string>
    <string name="yasmin_s">Yasmin_S</string>
    <string name="historia">Eu sentia meu coração batendo forte no peito enquanto corria por aqueles corredores fracamente iluminados. \n\n Ao longe, ainda podia escutar os passos de Naruto e os xingamentos enquanto arrombava mais uma porta, de mais uma cela, de mais um esconderijo de Orochimaru. \n\n Eu já havia perdido a conta de quantas vezes o havíamos procurado e, por mais doloroso que fosse admitir, começava a perder também a esperança de encontrá-lo. Sasuke não estaria ali, como tantas outras vezes em que havíamos nos sujeitado àquelas missões de reconhecimento que não resultavam em nada além de buscas infrutíferas. Eu concentrei o chakra em meu braço e dei com o cotovelo em mais uma porta, arrombando-a também, para me deparar com outra cela empoeirada e vazia. \n\nSasuke não está aqui, uma voz pareceu sussurrar para mim outra vez, no fundo da minha mente, mas eu avancei até a próxima porta mesmo assim. \n\nDesde a missão de reconhecimento da Ponte Tenchi, anos atrás, vínhamos insistindo nesse mesmo expediente. Esconderijo após esconderijo, pista após pista, missão após missão. \n\nE sempre saímos de mãos vazias. \n\nPor que aquela vez seria diferente? Senti minha garganta apertar com o choro, a mera expectativa de vê-lo me alucinava, e saber que acabaria em nada era doloroso. Eu estava completamente desesperada. Virei uma esquina, afoita, pronta para disparar por mais aquele corredor de fim escuro. Senti meu pulso ser agarrado com velocidade absurda, o que fez meu coração pular uma batida e o meu corpo dar um tranco para frente. No instante seguinte, alguém me puxou e fez meu corpo rodar, minhas costas batendo na parede de pedra. Soltei o ar com o impacto. — Procurando por mim? Aquela voz. O tempo parou. Foi como estar num sonho. O timbre inconfundível da voz de Sasuke entrou nos meus ouvidos e pareceu preencher minha mente enquanto eu, estupefata, via-o diante de mim, em carne e osso. Ele era iluminado de um jeito misterioso e irreal pela luz fraca da tocha presa na parede. — Sas…u…ke… — foi tudo que eu consegui proferir, minha garganta fechando pela surpresa. Não podia ser real. Mas as mãos dele que seguravam meus pulsos contra a parede e as íris ônix fixas nas minhas eram muito reais. Podia sentir meus olhos arregalados e minha boca aberta, sem conseguir compreender a situação, com meu coração batendo tão forte no peito que parecia prestes a sair pela boca. Minhas pernas estavam trêmulas. —</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>