<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".UserProfile">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txv_titulo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:text="@string/be_fic_title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="180sp"
                android:layout_height="180sp"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:textAlignment="center"
                app:srcCompat="@drawable/avatar" />

            <TextView
                android:id="@+id/txv_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:text="@string/yasmin_s"
                android:textAlignment="center"
                android:textColor="@color/pink_300"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txv_sobre_mim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="15sp"
                android:text="@string/sobre_mim"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txv_sobre_mim_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10sp"
                android:text="@string/sobre_mim_text"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txv_historias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30sp"
                android:text="histórias"
                android:textAlignment="center"
                android:textColor="@color/pink_300"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/storyList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_200" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>